Plan bulk send API feature
